--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: mark_pro
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  loggy: ^2.0.1+1
+  flutter_loggy: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
