--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  charts_flutter: ^0.12.0
   dio: ^4.0.3
   loggy: ^2.0.1+1
   flutter_loggy: ^2.0.1
-
+  shared_preferences: ^2.0.13
+  jwt_decoder: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
